# indiestack

./: .gitignore  .mcpregistry_registry_token  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile  GEMINI_BRAINSTORM_PROMPT.md  GEMINI_ROUND10_PROMPT.md  GEMINI_ROUND11_PROMPT.md  GEMINI_ROUND12_PROMPT.md  GEMINI_ROUND13_PROMPT.md  GEMINI_ROUND14_PROMPT.md  GEMINI_ROUND14_RESPONSE.md  GEMINI_ROUND15_PROMPT.md  GEMINI_ROUND15_RESPONSE.md  GEMINI_ROUND5_PROMPT.md  GEMINI_ROUND6_PROMPT.md  GEMINI_ROUND8_PROMPT.md  GEMINI_ROUND9_PROMPT.md  LAUNCH_CONTENT.md  MINDMAP.md  MONETISATION_PLAN.md  PRODUCT_HUNT_DRAFT.md  README.md  README_PYPI.md  ROADMAP.md  SHOW_HN_DRAFT.md  SYSTEM-OVERVIEW.md  VISION.md  check_stripe.py  fix_community_maker.py  fix_upvotes.py  fly.toml  glama.json  outreach_badges.csv  outreach_fixes.csv  purge_seeded_data.py  pyproject.toml  requirements-rag.txt  requirements.txt  (+8 more)
.agents/workflows/: backup.md  deploy.md  hub.md  publish-mcp.md  status.md
.claude/: settings.json
.claude-plugin/: mcp.json  plugin.json
.claude/commands/: backup.md  deploy.md  hub.md  meeting.md  orchestrate.md  publish-mcp.md  status.md
.claude/rules/: database.md  deploy.md  design.md  gotchas.md  mcp.md  stack.md  stripe.md  vision.md
.github/workflows/: stack-health.yml
.oats/thoughts/: thought-20260404-164452.json
.orchestra/: README.md  SYSTEM-OVERVIEW.md  config.json  launch-ceo.sh  launch.sh  mcp-config.json  orchestrator.py  rag_seed.py  rag_server.py  reactor_state.json  results_tracker.json  session_state.json
.orchestra/ceo/: CLAUDE.md  init-prompt.md  state.md
.orchestra/conway/: manifest.json
.orchestra/history/: 20260330_013510_d1f88cc9.json  20260330_014943_a249a401.json  20260330_020128_e0ad0052.json  20260330_020336_4aa105d8.json  20260330_021341_3c219204.json  20260330_021623_7338c689.json  20260330_021950_1a81f988.json  20260330_023037_8e78f222.json  20260330_023417_ec094018.json  20260330_024236_04c04202.json  20260330_025412_a8ac992f.json  20260330_030641_bbd9a588.json  20260404_143757_40d4f8e4.json  20260404_145921_312e572a.json  20260404_151723_a3729f15.json  20260404_153025_f818a927.json  20260404_161340_fd996d10.json
.orchestra/hooks/: mask-observations.sh
.orchestra/logs/: 2026-04-02-competitive-scan.md  2026-04-02-oats-blackboard-democratic-consensus.md  2026-04-02-research.md  2026-04-03-research.md  2026-04-03-thought.md  2026-04-04-research.md
.orchestra/master/: CLAUDE.md  init-prompt.md
.orchestra/meetings/: .gitkeep  2026-04-05-12-mcp-growth-maker-pro.md  2026-04-05-15-catalog-scope.md  2026-04-06-ai-sustainability-anthropic.md  2026-04-06-claude4-anthropic-outreach.md  2026-04-06-conway-spud-pregame.md  2026-04-07-conway-research.md  2026-04-07-dsp-outreach-stress-test.md  2026-04-07-future-models-anthropic-pitch.md
.orchestra/memory/: backend.md  content.md  devops.md  frontend.md  mcp.md  playbook.md  strategy.md
.outreach/: launch.sh
.outreach/master/: CLAUDE.md  init-prompt.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: CONCERNS.md  (+6 more)
26th-march-research/: research-1-unique-data.md.txt  research-2-survival-map.md.txt  research-3-business-models.md.txt  research-4-alternative-buyers.md.txt
data/: gap-queries-2026-04.json
docs/: founders-questionnaire-pat.md  founders-questionnaire.md
drafts/: demo-prompts.txt  reddit_claude_ai_post.txt
extension/: README.md  content.js  manifest.json  popup.html  popup.js  styles.css
github-action/: README.md  action.yml  audit.sh
logo/: 87e96ab4-9d63-439a-a07b-bf061858cf84.avif
marketing/: blog-ai-agents-tool-discovery.md  blog-best-places-to-list-2026.md  blog-indie-beats-enterprise.md  blog-indie-tool-stack.md  blog-listed-on-10-directories.md
memory/: decisions.md  maker_outreach_drafts.md  sprint.md
migrations/: add_submitter_email.sql
patches/: db-synonyms-may10.patch
scripts/: add_missing_tools.py  add_pair_indexes.py  apply_prod_batches.py  apply_synonyms_172.py  approve_curated.py  assign_secondary_categories.py  auto_review_pending.py  autoloop_watchdog.sh  autonomous_loop.sh  backfill_health.py  backfill_sdk_packages.py  bootstrap_cohesion.py  build_in_public.py  chaos_monkey.py  check_tool_freshness.py  cleanup_libraries.py  enrich_top_tools.py  event_reactor.py  find_leads.py  github_autopsy.py  github_health_sweep.py  ingest_awesome_list.py  ingest_awesome_selfhosted.py  ingest_openalternative.py  ingest_selfhst.py  launch_day.py  mine_github_compatibility.py  mine_github_migrations.py  moves.json  pattern_detector.py  preseed_packages.py  provoke.py  recategorise_apply.py  recategorise_dry_run.py  recategorise_prod_gen.py  reddit_reply.py  rotate_tool_of_week.py  scan_repos_for_outreach.py  seed_agent_services.py  synthetic_user.py  (+4 more)
(+315 files in other folders)
