[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "indiestack"
version = "1.14.0"
description = "MCP server for IndieStack — the discovery layer between AI coding agents and 8,000+ developer tools. Search, compare, scan projects, build stacks, and check compatibility before your AI generates boilerplate."
readme = "README_PYPI.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "IndieStack", email = "hello@indiestack.ai" },
]
keywords = ["mcp", "indie", "developer-tools", "ai", "claude", "cursor", "windsurf", "discovery", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.25.0",
    "python-whois>=0.9.0",
]

[project.scripts]
indiestack-mcp = "indiestack.mcp_server:main"
indiestack = "indiestack.cli:main"

[project.urls]
Homepage = "https://indiestack.ai"
Repository = "https://github.com/Pattyboi101/indiestack"

# Optional: full server dependencies (only needed for self-hosting)
[project.optional-dependencies]
server = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "aiosqlite>=0.19.0",
    "python-multipart>=0.0.6",
    "stripe>=8.0.0",
    "httpx>=0.25.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/indiestack"]

[tool.hatch.build.targets.sdist]
include = ["src/indiestack/**", "README_PYPI.md", "pyproject.toml", "LICENSE"]
exclude = ["*.db", "*.sqlite", "*.mp4", "*.png", "*.jpg", "dist/", "docs/", ".claude/", "__pycache__/", "*.pyc"]
